--- a/server/package.json
+++ b/server/package.json
@@ -20,12 +20,15 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
+    "react-cookie": "^6.1.1",
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.8.4",
     "@types/pg": "^8.10.4",
     "@types/uuid": "^9.0.5",
